--- a/src/styles/_wizardFormStyles.scss
+++ b/src/styles/_wizardFormStyles.scss
@@ -967,7 +967,7 @@
           }
         }
         .review_container {
-          height: 36vh;
+          height: 320px;
           position: absolute;
           right: 0;
           bottom: 0;
